--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="generator" content="hugo">
     <title>{{ .Site.Title }}</title>
     <link rel="stylesheet" href="{{ .Site.BaseURL }}main.css">
