--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -21,5 +21,11 @@
         </ul>
       </div>
     </article>
+    <footer>
+     <h1>About</h1>
+     <p>
+       I'm a software engineer who believes that the best code is no code.
+     </p>
+    </footer>
   </body>
 </html>
