--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -26,6 +26,10 @@
      <p>
        I'm a software engineer who believes that the best code is no code.
      </p>
+     <div class="footer-links">
+       <a href="https://github.com/jalan"><img src="{{ .Site.BaseURL }}github.png" /></a>
+       <a href="https://www.linkedin.com/in/jalanpalmer"><img src="{{ .Site.BaseURL }}in.png" /></a>
+     </div>
     </footer>
   </body>
 </html>
