remove useless div

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -22,14 +22,10 @@
       </div>
     </article>
     <footer>
-     <h1>About</h1>
-     <p>
-       I'm a software engineer who believes that the best code is no code.
-     </p>
-     <div class="footer-links">
-       <a href="https://github.com/jalan"><img src="{{ .Site.BaseURL }}github.png" /></a>
-       <a href="https://www.linkedin.com/in/jalanpalmer"><img src="{{ .Site.BaseURL }}in.png" /></a>
-     </div>
+      <h1>About</h1>
+      <p>I'm a software engineer who believes that the best code is no code.</p>
+      <a href="https://github.com/jalan"><img src="{{ .Site.BaseURL }}github.png" /></a>
+      <a href="https://www.linkedin.com/in/jalanpalmer"><img src="{{ .Site.BaseURL }}in.png" /></a>
     </footer>
   </body>
 </html>
