placeholder for empty site

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,11 +14,15 @@
     </header>
     <article>
       <div class="post-list">
+        {{ if not .Data.Pages }}
+        <p>There aren't any posts yet! I'm working on it.</p>
+        {{ else }}
         <ul>
         {{ range .Data.Pages.ByDate.Reverse }}
           <li><a href="{{ .Permalink }}">{{ .Date.Format "2006-01-02" }} - {{ .Title }}</a></li>
         {{ end }}
         </ul>
+        {{ end }}
       </div>
     </article>
     <footer>
