--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="generator" content="hugo">
     <title>{{ .Site.Title }}</title>
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}main.css">
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body>
     <header>
@@ -28,8 +28,8 @@
     <footer>
       <h1>About</h1>
       <p>I'm a software engineer who believes that the best code is no code.</p>
-      <a href="https://github.com/jalan"><img src="{{ .Site.BaseURL }}github.png" /></a>
-      <a href="https://www.linkedin.com/in/jalanpalmer"><img src="{{ .Site.BaseURL }}in.png" /></a>
+      <a href="https://github.com/jalan"><img src="github.png" /></a>
+      <a href="https://www.linkedin.com/in/jalanpalmer"><img src="in.png" /></a>
     </footer>
   </body>
 </html>
