--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="generator" content="hugo">
     <title>{{ .Title }} - {{ .Site.Title }}</title>
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}main.css">
+    <link rel="stylesheet" href="/main.css">
   </head>
   <body>
     <header>
-      <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
+      <h1><a href="/">{{ .Site.Title }}</a></h1>
       <h2>{{ .Title }}</h2>
       <p>{{ .Date.Format "2006-01-02" }}</p>
     </header>
