--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -28,8 +28,8 @@
     <footer>
       <h1>About</h1>
       <p>I'm a software engineer who believes that the best code is no code.</p>
-      <a href="https://github.com/jalan"><img src="github.png" /></a>
-      <a href="https://www.linkedin.com/in/jalanpalmer"><img src="in.png" /></a>
+      <a href="https://github.com/jalan"><img src="github.png"></a>
+      <a href="https://www.linkedin.com/in/jalanpalmer"><img src="in.png"></a>
     </footer>
   </body>
 </html>
