--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,21 +10,19 @@
   <body>
     <header>
       <h1>{{ .Site.Title }}</h1>
-      <h2>Posts</h2>
     </header>
-    <article>
-      <div class="post-list">
-        {{ if not .Data.Pages }}
-        <p>There aren't any posts yet! I'm working on it.</p>
-        {{ else }}
-        <ul>
-        {{ range .Data.Pages.ByDate.Reverse }}
-          <li><a href="{{ .Permalink }}">{{ .Date.Format "2006-01-02" }} - {{ .Title }}</a></li>
-        {{ end }}
-        </ul>
-        {{ end }}
-      </div>
-    </article>
+    <main>
+      <h1>Posts</h1>
+      {{- if not .Data.Pages }}
+      <p>There aren't any posts yet! I'm working on it.</p>
+      {{- else }}
+      <ul>
+      {{- range .Data.Pages.ByDate.Reverse }}
+        <li><a href="{{ .Permalink }}">{{ .Date.Format "2006-01-02" }} - {{ .Title }}</a></li>
+      {{- end }}
+      </ul>
+      {{- end }}
+    </main>
     <footer>
       <h1>About</h1>
       <p>I'm a software engineer who believes that the best code is no code.</p>
