--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <h1><a href="/">{{ .Site.Title }}</a></h1>
-      <h2>{{ .Title }}</h2>
-      <p>{{ .Date.Format "2006-01-02" }}</p>
     </header>
     <article>
+      <h1>{{ .Title }}</h1>
+      <time>{{ .Date.Format "2006-01-02" }}</time>
       {{ .Content }}
     </article>
   </body>
