--- a/static/main.css
+++ b/static/main.css
@@ -3,9 +3,9 @@ html {
   font-size: 18px;
 }
 body {
-  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 900px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -45,6 +45,7 @@ article time {
 }
 article h2 {
   font-size: 24px;
+  margin-top: 40px;
 }
 article img {
   max-width: 100%;
