--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,7 @@
-html {
-  font-family: sans-serif;
-  font-size: 18px;
-}
 body {
+  color: #222;
+  font-family: "Arial", sans-serif;
+  font-size: 18px;
   margin-left: auto;
   margin-right: auto;
   max-width: 900px;
@@ -20,7 +19,7 @@ header h1 {
   font-size: 48px;
 }
 header a {
-  color: #000;
+  color: #222;
 }
 main {
   text-align: center;
@@ -50,6 +49,9 @@ article h2 {
 article img {
   max-width: 100%;
 }
+p {
+  line-height: 1.3;
+}
 pre {
   background-color: #111;
   border-radius: 4px;
@@ -73,4 +75,8 @@ footer a {
 }
 footer img {
   display: block;
+  opacity: 0.87;
+}
+footer img:hover {
+  opacity: 1;
 }
