footer for feedback

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,6 +15,12 @@
       <h1>{{ .Title }}</h1>
       <time>{{ .Date.Format "2006-01-02" }}</time>
       {{ .Content }}
+      <footer>
+        <p>
+          Find a problem? Want to leave any feedback?
+          Please submit an issue on <a href="https://github.com/jalan/jalan.io">this site's github repo</a>.
+        </p>
+      </footer>
     </article>
   </body>
 </html>
