--- a/static/main.css
+++ b/static/main.css
@@ -63,20 +63,23 @@ pre {
 code {
   font-family: "Consolas", "Menlo", "Monaco", "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
 }
-footer {
+article footer {
+  margin-top: 100px;
+}
+main footer {
   text-align: center;
 }
-footer h1 {
+main footer h1 {
   margin: 48px;
 }
-footer a {
+main footer a {
   display: inline-block;
   margin: 40px 12px;
 }
-footer img {
+main footer img {
   display: block;
   opacity: 0.87;
 }
-footer img:hover {
+main footer img:hover {
   opacity: 1;
 }
