--- a/static/main.css
+++ b/static/main.css
@@ -60,6 +60,9 @@ article h2 {
   margin-top: 40px;
 }
 article img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
 }
 p {
