Offset blockquotes more

--- a/static/main.css
+++ b/static/main.css
@@ -79,6 +79,9 @@ pre {
 code {
   font-family: "Consolas", "Menlo", "Monaco", "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace;
 }
+blockquote {
+  margin: 30px;
+}
 cite {
   display: block;
   margin-top: 10px;
