--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -17,7 +17,7 @@
       <section>
         <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
         <p>{{ .Description }}</p>
-        <time>{{ .Date.Format "2006-01-02" }}</time>
+        <time>Last updated {{ .Lastmod.Format "2006-01-02" }}</time>
       </section>
       {{- end }}
       <footer>
