--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -13,7 +13,7 @@
     </header>
     <article>
       <h1>{{ .Title }}</h1>
-      <time>{{ .Date.Format "2006-01-02" }}</time>
+      <time>Last updated {{ .Lastmod.Format "2006-01-02" }}</time>
       {{ .Content }}
       <footer>
         <p>
