Spell GitHub right

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,7 @@
       <footer>
         <p>
           Find a problem? Want to leave any feedback?
-          Please submit an issue on <a href="https://github.com/jalan/jalan.io">this site's github repo</a>.
+          Please submit an issue on <a href="https://github.com/jalan/jalan.io">this site's GitHub repo</a>.
         </p>
       </footer>
     </article>
